<resources>
    <!--labels-->
    <string name="app_name">EB C&amp;M</string>
    <string name="title_activity_devices_list">Favourite Devices</string>

    <!--menu-->
    <string name="action_devices">devices</string>
    <string name="action_help">Help</string>

    <!--titles-->
    <string name="create_new_profile">Create Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_new_item">Create Device</string>
    <string name="edit_device_item">Edit Device</string>
    <string name="name_title">Name</string>
    <string name="price_title">Price</string>
    <string name="result_graph_title">CONSUMPTION OF ELECTRICITY GRAPH (kWh)</string>
    <string name="highest_consumption">5 Devices With Highest Power Consumption At The End Of The Month</string>
    <string name="cost_info">Cost Information</string>
    <string name="help">Help</string>

    <!--hints-->
    <string name="new_profile_name">Profile Name</string>
    <string name="description">Description</string>
    <string name="profile_price">Price kWh</string>
    <string name="new_item">Device Name</string>
    <string name="power">Power W</string>
    <string name="quantity">Quantity</string>
    <string name="usage_h_day">hours</string>
    <string name="usage_min_day">mins</string>
    <string name="usage_d_month">Usage d/Month</string>
    <string name="delete_name">Delete Name</string>

    <!--buttons-->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="pick_an_item">Pick An Item</string>

    <!--special-->
    <string name="orText">------ or ------</string>
    <string name="notice">Notice:</string>
    <string name="irreversible">This is an irreversible action!</string>
    <string name="kwh">kWh</string>
    <string name="time_total">Time total: </string>
    <string name="power_total">Power total: </string>
    <string name="price_total">Price total: </string>
    <string name="result_name">Name: </string>
    <string name="result_power">Power: </string>
    <string name="result_consumption">Total: </string>
    




    <!--help - app guide-->
    <string name="help_title">Welcome to the App Guide</string>
    <string name="help_description">Please follow the guidelines to use the app.</string>
    <string name="help_rules1">1. Create a new profile.</string>
    <string name="help_rules2">2. Add a new profile.</string>
    <string name="help_rules3">3. Click one of the profile to continue with calculation or add new devices
                                to the profile.</string>
    <string name="help_rules4">4. Edit a profile.</string>
    <string name="help_rules5">5. Delete a profile. NB: Delete a profile will delete
                                all the devices of that profile too</string>
    <string name="space_textView">OR</string>
    <string name="help_rules6">6. Add an item in the profile.</string>
    <string name="help_rules7">7. Pick an item. </string>
    <string name="help_rules8">8. Choose items that matches your devices.</string>
    <string name="help_rules9">9. Press "$" for the calculation result.</string>

    <string name="help_picture">Help Picture</string>

</resources>
