<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewItemActivity"
        android:theme="@android:style/Theme.Holo.NoActionBar"
>
    <TextView
            android:text="@string/create_new_profile"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/newProfileTitle"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/newProfileNameLayout"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="50dp"/>




    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonItemAdd"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/buttonItemCancel"
            app:layout_constraintTop_toBottomOf="@id/newProfileDescriptionLayout" />
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonItemCancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonItemAdd"
            app:layout_constraintTop_toBottomOf="@id/newProfileDescriptionLayout"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/newProfileNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/newProfileTitle"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="75dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_profile_name"
                android:textColor="@color/black"
                android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/newProfileDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/newProfileNameLayout" android:layout_marginTop="50dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textColor="@color/black"
                android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>



</android.support.constraint.ConstraintLayout>