<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Device.NewDeviceActivity"
        android:theme="@android:style/Theme.Holo.NoActionBar"
>

    <View
            android:id="@+id/back_view_delete_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    />

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pop_up_background"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingBottom="40dp"

    >



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/delete_top_layout"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
        >
            <TextView
                    android:text="@string/delete"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newProfileTitle"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_profile_name"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:id="@+id/delete_profile_name"
            />
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_notice"
                app:layout_constraintTop_toBottomOf="@+id/delete_top_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:text="@string/notice" android:layout_marginTop="16dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_description"
                app:layout_constraintTop_toBottomOf="@+id/delete_notice"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/irreversible"
                android:layout_marginTop="3dp"/>


        <TextView
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDeleteProfileCancel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="42dp"
                app:layout_constraintTop_toBottomOf="@+id/delete_description"
                android:layout_marginStart="80dp"/>

        <TextView
                android:text="@string/confirm"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDeleteProfileConfirm"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delete_description"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="80dp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>