<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Device.NewDeviceActivity"
        android:theme="@android:style/Theme.Holo.NoActionBar"
>

    <View
            android:id="@+id/back_view_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    />

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pop_up_background"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="230dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingBottom="40dp"
            >

        <TextView
                android:text="@string/edit_profile"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/deleteProfileTitle"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/editProfileName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="24dp"/>

        <TextView
                android:text="@string/confirm"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEditProfileConfirm"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
        />
        <TextView
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEditProfileCancel"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/editProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/deleteProfileTitle">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_profile_name"
                    android:textColor="@color/black"
                    android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

                android:theme="@style/TextInputLayoutAppearance"
                android:id="@+id/editProfileDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/editProfileName">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textColor="@color/black"
                    android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/editProfilePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/editProfileDescription">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_profile_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_price"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>