<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewDeviceActivity"
        android:theme="@android:style/Theme.Holo.NoActionBar"
>
    <View
            android:id="@+id/backViewNavigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pop_up_background"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:clickable="true"
            android:focusable="true"

    >

            <TextView
                    android:text="@string/create_new_item"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                    android:visibility="visible"
                    android:text="@string/orText"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/orText"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"

                    app:layout_constraintTop_toBottomOf="@id/buttonItemPick"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            <Button
                    android:visibility="visible"
                    android:id="@+id/buttonItemPick"
                    android:text="@string/pick_an_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:background="@drawable/basic_button_green"

                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
            />

            <TextView
                    android:text="@string/add"
                    android:textColor="@color/colorSecondary"
                    android:textSize="17sp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonItemAdd"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />
            <TextView
                    android:text="@string/cancel"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonItemCancel"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/orText"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
            >
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/newItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorSecondary"
                >

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/new_item"
                            android:textColor="@color/black"
                            android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/newItemConsumption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorSecondary">

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/consumption"
                            android:textColor="@color/black"
                            android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/newItemQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorSecondary">

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/quantity"
                            android:textColor="@color/black"
                            android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:minWidth="200dp"
                >
                    <android.support.design.widget.TextInputLayout
                            android:layout_weight="1"
                            android:id="@+id/newItemUsageHours"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorSecondary">

                        <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/usage_h_day"
                                android:textColor="@color/black"
                                android:imeOptions="actionNext"
                                android:nextFocusDown="@+id/newItemUsageMinutes"
                                android:inputType="time"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/newItemUsageMinutes"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorSecondary"
                    >

                        <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/usage_min_day"
                                android:textColor="@color/black"
                                android:inputType="time"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/newItemUsageDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorSecondary"

                >

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/usage_d_month"
                            android:textColor="@color/black"
                            android:inputType="numberSigned"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>











    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>